[tool.poetry]
name = "remontapi"
version = "0.1.0"
description = "API сервис для приема заказов"
authors = ["Danil Lasuriya <d.r.lasuria@gmail.com>"]
license = "roflan"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
